--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       <script src="app/factory/mvUser.js"></script>
       <script src="app/factory/loginNotifier.js"></script>
       <script src="app/factory/mvAuth.js"></script>
+      <script src="app/factory/blogCRUD.js"></script>
 
 
 
